--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-#root {
+@import "tailwindcss";
+
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +41,9 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
+body {
+  @apply transition-colors duration-200;
+}     .dark {
+      @apply bg-gray-900 text-white;
+    } 
